--- a/Lathorva.Repository.JsonFile/Lathorva.Repository.JsonFile.csproj
+++ b/Lathorva.Repository.JsonFile/Lathorva.Repository.JsonFile.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="lathorva.common" Version="2.1.1" />
+  </ItemGroup>
+
 </Project>
